# MDog

./: .gitignore  README.md  index.html  package-lock.json  package.json
.github/workflows/: publish.yml
src/: App.css  App.css.map  App.jsx  App.scss  MDRender.css  MDRender.css.map  MDRender.jsx  MDRender.scss  colors.scss  index.css  main.css  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  app_config.rs  main.rs  md_to_html.rs  state.rs  storage.rs
src/components/: Sidebar.css  Sidebar.css.map  Sidebar.jsx  Sidebar.scss
src/components/FileManager/: FileItem.css  FileItem.css.map  FileItem.jsx  FileItem.scss  FileList.css  FileList.css.map  FileList.jsx  FileList.scss  RightClickMenu.jsx  RightClickMenu.scss
src/state/: FolderActiveSlice.js  MDContentSlice.js  OpenedPathsSlice.js  ResizingSlice.js  RootFileListSlice.js  SidebarOpenSlice.js  store.js
