[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0"
serde_yaml = "0.9.27"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.2", features = ["window-all", "system-tray"] }
config = "0.13.3"
tracing = "0.1.39"
tracing-subscriber = "0.3.17"
pulldown-cmark = "0.9.3"
syntect = "5.1.0"
base64 = "0.21.5"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
